# termitraductor

./: README.md  pyproject.toml
src/traductor/: cli.py  config.py  dto.py  init.py  translator.py  tui.py
src/traductor_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
